[gd_scene load_steps=13 format=3 uid="uid://gibebdsj2icu"]

[ext_resource type="Script" uid="uid://dlodim7iu88xo" path="res://Scenes/Main/LivingRoom.gd" id="1_w7hdj"]
[ext_resource type="PackedScene" uid="uid://comq2w6peman3" path="res://Scenes/UI/NotePopup.tscn" id="2_n04td"]
[ext_resource type="Texture2D" uid="uid://kwadobwyvlhy" path="res://Assets/Art/Backgrounds/Living_Room_BG.png" id="2_x63i8"]
[ext_resource type="Texture2D" uid="uid://cf3mya8pj46ca" path="res://Assets/Art/Cat/CatStandingBlood/CatStandingBlood_0003.png" id="3_y52pq"]
[ext_resource type="Texture2D" uid="uid://s3aw61nffylq" path="res://Assets/Art/RoomObjects/sofar.png" id="4_6vhj2"]
[ext_resource type="Texture2D" uid="uid://dfmegyvcjcyvb" path="res://Assets/Art/RoomObjects/lamp.png" id="5_2ktva"]
[ext_resource type="Texture2D" uid="uid://5ekuh86ef0mh" path="res://Assets/Art/RoomObjects/door.png" id="6_3cbq3"]
[ext_resource type="Texture2D" uid="uid://bnym4vymymuwx" path="res://Assets/Art/RoomObjects/clock.png" id="6_ps1lg"]
[ext_resource type="Texture2D" uid="uid://1gv430e1tqig" path="res://Assets/Art/RoomObjects/box.png" id="7_4kmbc"]
[ext_resource type="Texture2D" uid="uid://duhblvtfrceax" path="res://Assets/Art/RoomObjects/plant.png" id="8_ps1lg"]
[ext_resource type="Texture2D" uid="uid://bnt50et8hslxp" path="res://Assets/Art/RoomObjects/mail.png" id="9_gf16i"]
[ext_resource type="Texture2D" uid="uid://crvr5yuykbjn2" path="res://Assets/Art/RoomObjects/pic.png" id="10_rh5dd"]

[node name="LivingRoom" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_w7hdj")

[node name="BG" type="TextureRect" parent="."]
z_index = -3
layout_mode = 1
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource("2_x63i8")

[node name="ClickLayer" type="Control" parent="."]
anchors_preset = 0
offset_left = -1.0
offset_top = 1.0
offset_right = 1917.0
offset_bottom = 1076.0

[node name="Cat" type="TextureButton" parent="ClickLayer"]
layout_mode = 0
offset_left = 809.0
offset_top = 838.0
offset_right = 1539.0
offset_bottom = 1718.0
scale = Vector2(0.25, 0.25)
texture_normal = ExtResource("3_y52pq")
stretch_mode = 1

[node name="Sofa" type="TextureButton" parent="ClickLayer"]
layout_mode = 0
offset_left = 176.0
offset_top = 541.0
offset_right = 936.0
offset_bottom = 963.0
texture_hover = ExtResource("4_6vhj2")

[node name="Lamp" type="TextureButton" parent="ClickLayer"]
layout_mode = 0
offset_left = 953.0
offset_top = 338.0
offset_right = 1157.0
offset_bottom = 917.0
texture_hover = ExtResource("5_2ktva")

[node name="Clock" type="TextureButton" parent="ClickLayer"]
z_index = 5
layout_mode = 0
offset_left = 368.0
offset_top = 673.0
offset_right = 460.0
offset_bottom = 775.0
texture_hover = ExtResource("6_ps1lg")

[node name="Door" type="TextureButton" parent="ClickLayer"]
layout_mode = 1
anchors_preset = -1
anchor_bottom = 0.037
offset_left = 1153.0
offset_top = 271.0
offset_right = 1436.0
offset_bottom = 839.225
texture_hover = ExtResource("6_3cbq3")

[node name="Box" type="TextureButton" parent="ClickLayer"]
layout_mode = 0
offset_left = 1444.0
offset_top = 796.0
offset_right = 1783.0
offset_bottom = 1008.0
texture_hover = ExtResource("7_4kmbc")

[node name="Tree" type="TextureButton" parent="ClickLayer"]
layout_mode = 0
offset_left = 2.0
offset_top = 554.0
offset_right = 298.0
offset_bottom = 947.0
texture_hover = ExtResource("8_ps1lg")

[node name="Mail" type="TextureButton" parent="ClickLayer"]
z_index = 1
layout_mode = 0
offset_left = 1259.0
offset_top = 580.0
offset_right = 1345.0
offset_bottom = 640.0
texture_hover = ExtResource("9_gf16i")

[node name="Pic" type="TextureButton" parent="ClickLayer"]
layout_mode = 0
offset_left = 128.0
offset_top = 207.0
offset_right = 294.0
offset_bottom = 354.0
texture_hover = ExtResource("10_rh5dd")

[node name="HUD" type="HBoxContainer" parent="."]
z_index = 4
layout_mode = 0
offset_left = -1.0
offset_top = 4.0
offset_right = 1571.0
offset_bottom = 117.0

[node name="DayLabel" type="Label" parent="HUD"]
layout_mode = 2

[node name="AffinityLabel" type="Label" parent="HUD"]
layout_mode = 2

[node name="InjuryLabel" type="Label" parent="HUD"]
layout_mode = 2

[node name="StateLabel" type="Label" parent="HUD"]
layout_mode = 2

[node name="CareLabel" type="Label" parent="HUD"]
layout_mode = 2

[node name="WarningLabel" type="Label" parent="HUD"]
layout_mode = 2

[node name="NotePopup" parent="." instance=ExtResource("2_n04td")]

[node name="ConfirmEndDayDialog" type="ConfirmationDialog" parent="."]
